<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="project_name">PortScan</string>
    <string name="results_tv">Results</string>
	<string name="scanning">Scanning port number</string>
	<string name="start_scan_bt">Scan</string>
	<string name="stop_bt">Stop</string>
	<string name="scan_stopped">Stopped</string>
	<string name="ip_address_et">IP Address</string>
	<string name="start_port_et">Start Port</string>
	<string name="end_port_et">End Port</string>
	<string name="show_open_ports_cb">Show Open Ports</string>
	<string name="show_closed_ports_cb">Show Closed Ports</string>
	<string name="timeout">Timeout(Milisseconds)</string>
	<string name="scan_end">Scan end!</string>
</resources>
